# projeto-analise-dados-DuckDB

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: business-reporter.md  code-reviewer.md
.claude/commands/: abrir-sessao.md  contexto.md  encerrar-questao.md  iniciar-questao.md  status.md
.claude/rules/: analysis-writing.md  code-style.md  memory-bank-format.md  notebook-base.md  project-globals.md  sql-conventions.md  visualization.md
.claude/skills/analisar-negocio/: SKILL.md  reference.md
.claude/skills/consultar-sql/: SKILL.md  reference.md
.claude/skills/diagnosticar/: SKILL.md  reference.md
.claude/skills/encontrar-erro/: SKILL.md  reference.md
.claude/skills/insight-livre/: SKILL.md  reference.md
.claude/skills/modelar-dimensional/: SKILL.md  reference.md
.claude/skills/revisao-final/: SKILL.md  reference.md
.claude/skills/revisar-questao/: SKILL.md  reference.md
.claude/skills/shared/: review-memory.md
.claude/skills/tratar/: SKILL.md  reference.md
artifacts/diagrams/: DER_MODELO_DIMENSIONAL_BLOCO_7.md
data/interim/: ecommerce_tratado.csv
data/raw/: ecommerce_vendas.csv
docs/: PRD.md  instrucoes_desafio.md
memory-bank/: active-context.md  data-issues.md  decisions.md  handoff.md  question-status.md  review-checklist.md
notebooks/: case_techshop.ipynb
scripts/: analise_crescimento.py  atualizar_bloco6_code.py  inserir_bloco6.py  inserir_bloco6_analise.py
sql/: q3_a_top5_receita.sql  q3_b_taxas_categoria.sql  q3_c_clientes_recorrentes.sql  q3_d_ticket_uf.sql
